[package]
name = "timetoreach"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtfs-structures = {path="gtfs-structure"}
rstar = "0.9.3"
proj = "0.27.0"
lazy_static = "1.4.0"
log = "0.4.17"
serde = {version = "1.0.148", features=["derive"]}
id-arena = "2.2.1"
serde_json = "1.0.89"
chrono = {version = "0.4.24", features = ["rkyv"]}
gdal = {version = "0.15"}
#gdal-sys = { version = "0.8.0", features = ["bindgen"]}
geo-types = "0.7.8"
warp = "0.3.3"
int-enum = "0.5.0"
rkyv = "0.7.1"
tokio = {version="1.24.1", features=["full"]}

env_logger = "0.10.0"
[workspace]
members = ["gtfs-structure"]
