[package]
name = "timetoreach"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtfs-structure-2 = {path="gtfs-structure-2"}
rstar = "0.11.0"
proj = { version = "0.27.0" }
lazy_static = "1.4.0"
log = "0.4.17"
serde = {version = "1.0.148", features=["derive"]}
serde_json = "1.0.89"
chrono = {version = "0.4.24", features = ["rkyv"]}
gdal = {version = "0.15"}
geo-types = "0.7.8"
async-compression = "0.4.0"
warp = {version = "0.3.5", features=["tls", "compression-gzip"]}
id-arena = "2.2.1"
lru = "0.10.0"
geojson = "0.24.1"
rkyv = {version = "0.7.42", features=["validation"]}
tokio = {version="1.28.2", features=["full"]}

futures = "0.3.28"
env_logger = "0.10.0"
rustc-hash = "1.1.0"
anyhow = "1.0.72"
[workspace]
members = ["gtfs-structure", "gtfs-structure-2"]

[features]
default = []

https = []
all-cities = []
prod = ["https", "all-cities"]
