[package]
name = "bike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
petgraph = { path = "../petgraph" }
geojson = "0.24.1"
anyhow = "1.0.75"

[profile.dev.package.serde_json]
opt-level = 3